<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentPageTwo">


    <TextView
        android:id="@+id/tvYourFinalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_score"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="48sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvPlayerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvYourFinalScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        android:text="@string/score"
        android:textSize="40sp"/>

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvPlayerScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        android:text="@string/play_again"
        android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>