<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentPageThree">
    
    <TextView
        android:id="@+id/tvMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"/>
    
    
    <EditText
        android:id="@+id/edMinValue"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edMinValue"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/max"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edMaxValue"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMax"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edMaxValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/submit"/>
</androidx.constraintlayout.widget.ConstraintLayout>