<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentPageOne"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/rc00"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/rc01"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/rc02"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/rc03"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/rc10"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/rc11"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/rc12"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/rc13"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/rc20"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/rc21"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/rc22"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/rc23"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:background="@color/black"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/your_current_score"
        android:gravity="center"
        android:textSize="48sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvPageOneScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/score"
        android:gravity="center"
        android:textSize="64sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btnGiveUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/give_up"
            android:textSize="16sp"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/btnEndGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/end_game"
            android:textSize="16sp"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnSetRandomNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/set_random_number_range"
        android:textSize="16sp"/>
</LinearLayout>